--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "npm": "5.6.x"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^4.4.1",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.11.0"
   }
