--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack"
   },
   "dependencies": {
-    "harp": "*"
+    "harp": "*",
+    "secure-web-storage": "^1.0.2"
   },
   "engines": {
     "npm": "5.6.x"
